# trangarcom

./: .gitignore  .travis.yml  .travis.yml.backup  Cargo.toml  Dockerfile  publish.sh  release.sh  tag_stable.sh
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml
libs/cookie-rs/: Cargo.toml
migrations/2018-05-28-094521_logging/: down.sql  up.sql
migrations/2018-06-02-103939_blog/: down.sql  up.sql
migrations/2018-06-04-112209_logging_drop_ip/: down.sql  up.sql
migrations/2018-11-18-143525_portfolio/: down.sql  up.sql
src/: lib.rs  logger.rs  main.rs  rocket_utils.rs  schema.rs  state.rs
src/data/: context.rs  mod.rs
src/fairings/: logger.rs  mod.rs  prometheus.rs
src/logger/: data.rs  entry.rs  mod.rs
src/middleware/: appinsights.rs  mod.rs  prometheus.rs
src/models/: blog.rs  mod.rs  portfolio.rs  request.rs
src/routes/: mod.rs  portfolio.rs
static/: blog.hbs  blog_detail.hbs  index.hbs  index.html  layout.hbs  resume.css  style.css
static/favicon/: source.txt
templates/: _layout.html  blog.hbs  blog.html  blog_detail.hbs  blog_detail.html  index.hbs  index.html  layout.hbs  layout.html  portfolio.html  resume.hbs  resume.html
