[package]
name = "trangarcom"
version = "0.1.0"
authors = ["Trangar <victor.koenders@gmail.com>"]
edition = "2018"

[dependencies]
askama = "0.11"
async-std = { version = "1.10", features = ["attributes"] }
tide = "0.16.0"
pulldown-cmark = { version = "0.9", default-features = false, features = ["simd"] }

[dependencies.prometheus]
version = "0.13"
features = ["process"]

[profile.release]
lto = true
